--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,20 @@
-[submodule "Hazel\\Vendor\\spdlog"]
-	path = Hazel\\Vendor\\spdlog
+[submodule "Hazel/Vendor/spdlog"]
+	path = Hazel/Vendor/spdlog
 	url = https://github.com/gabime/spdlog
 	ignore = dirty
-[submodule "Hazel\\Vendor\\GLFW"]
-	path = Hazel\\Vendor\\GLFW
-	url = https://github.com/TheCherno/glfw
+[submodule "Hazel/Vendor/GLFW"]
+	path = Hazel/Vendor/GLFW
+	url = https://github.com/thecherno/glfw
 	ignore = dirty
-[submodule "Hazel\\Vendor\\imgui"]
-	path = Hazel\\Vendor\\imgui
-	url = https://github.com/TheCherno/imgui
+[submodule "Hazel/Vendor/imgui"]
+	path = Hazel/Vendor/imgui
+	url = https://github.com/thecherno/imgui
 	ignore = dirty
-[submodule "Hazel\\Vendor\\glm"]
-	path = Hazel\\Vendor\\glm
+[submodule "Hazel/Vendor/glm"]
+	path = Hazel/Vendor/glm
 	url = https://github.com/g-truc/glm
 	ignore = dirty
-[submodule "Hazel\\Vendor\\yaml-cpp"]
-	path = Hazel\\Vendor\\yaml-cpp
+[submodule "Hazel/Vendor/yaml-cpp"]
+	path = Hazel/Vendor/yaml-cpp
 	url = https://github.com/thecherno/yaml-cpp
 	ignore = dirty
