--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,25 @@
 [submodule "Hazel/Vendor/spdlog"]
 	path = Hazel/Vendor/spdlog
 	url = https://github.com/gabime/spdlog
+	branch = 1aace95c
 	ignore = dirty
 [submodule "Hazel/Vendor/GLFW"]
 	path = Hazel/Vendor/GLFW
 	url = https://github.com/thecherno/glfw
+	branch = 9bed794a
 	ignore = dirty
 [submodule "Hazel/Vendor/imgui"]
 	path = Hazel/Vendor/imgui
 	url = https://github.com/thecherno/imgui
+	branch = 3cf61f67
 	ignore = dirty
 [submodule "Hazel/Vendor/glm"]
 	path = Hazel/Vendor/glm
 	url = https://github.com/g-truc/glm
+	branch = 4abd4648
 	ignore = dirty
 [submodule "Hazel/Vendor/yaml-cpp"]
 	path = Hazel/Vendor/yaml-cpp
 	url = https://github.com/thecherno/yaml-cpp
+	branch = 3b3c669
 	ignore = dirty
